test/sematest/valid/test4.valid.java
/* -*- coding:utf-8; mode:java; -*- */

class Test {

	public static void main(String[] args) { }

	public int bogous() {
		/* Invalid Java, valid MiniJava but UB if executed. */
		int crude;
		return crude;
	}

}
