test/sematest/invalid/return.java
class A {
  public static void main(String[] args) {
    return 4;
  }
}